﻿$Revision$
	$Author$ $Date$
	1. программа для замера скорости работы
	приложены базы , чтобы тесты были одинаковы. результаты замеров в result.xls

#Revision: 1737
	#Author: ctapmex Date: 2011-07-08 20:57:03 +0600 (Пт, 08 июл 2011)
	Брнач создан для переделки ядра бибилиотеки/парсера для работы с одним 
	классом строки InternalString (ничего умнее не придумал), а не куча DString,SString.
	Предварительные тесты показали увеличение скорости работы .

#Revision: 1715
	#Author: ctapmex Date: 2011-06-28 16:51:35 +0600 (Вт, 28 июн 2011)
	1. добавлена возможность использовать prototype с одинаковыми именами.
	!! использовать данную возможность нужно только при первичной загрузке базы схем.
	т.е. загрузить базы, загрузить схему, например cpp, попользоваться ей, а потом попытаться 
	заменить её на другую без перезагрузки всей базы, нельзя - будут ошибки

#Revision: 1712
	#Author: ctapmex Date: 2011-06-27 17:28:31 +0600 (Пн, 27 июн 2011)
	1. неверный порядок вызова процедур - обращение к непроинициализированным данным

#Revision: 1687
	#Author: ctapmex Date: 2011-03-18 14:23:15 +0500 (Пт, 18 мар 2011)
	1. ошибка в 1676

#Revision: 1685
	#Author: ctapmex Date: 2011-03-17 23:15:41 +0500 (Чт, 17 мар 2011)
	1. у нас экземпларов CRegExp много, а стек для "рекурсии" должен быть один. 
	в итоге скорость работы практически не отличается от ревизии 1683

#Revision: 1684
	#Author: ctapmex Date: 2011-03-17 17:21:58 +0500 (Чт, 17 мар 2011)
	1. Сливаем с бранчем ctapmex_no_recursion
	избавляемся от рекурсии в CRegExp::lowParse

#Revision: 1683
	#Author: ctapmex Date: 2011-03-16 15:07:35 +0500 (Ср, 16 мар 2011)
	1. небольшая утечка

#Revision: 1676
	#Author: ctapmex Date: 2011-03-13 22:24:53 +0500 (Вс, 13 мар 2011)
	1. оптимизация String::indexOf

#Revision: 1666
	#Author: ctapmex Date: 2011-03-06 21:56:30 +0500 (Вс, 06 мар 2011)
	1. с 3 попытки 1549 закрываем -)

#Revision: 1656
	#Author: ctapmex Date: 2011-02-24 00:02:43 +0500 (Чт, 24 фев 2011)